## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# PELOTON WIRE PROTOCOL
######################################################################

pelotonwire_FILES = \
			  pelotonwire/protocol.cpp \
			  pelotonwire/socket_base.cpp

pelotonwire_INCLUDES = \
				 -I$(srcdir)/backend/libpq