## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# LIBPQ_BACKEND
######################################################################

libpq_backend_FILES = \
						 libpq/backend/auth.cpp \
						 libpq/backend/be-fsstubs.cpp \
						 libpq/backend/be-secure.cpp \
						 libpq/backend/crypt.cpp \
						 libpq/backend/hba.cpp \
						 libpq/backend/ip.cpp \
						 libpq/backend/md5.cpp \
						 libpq/backend/pqcomm.cpp \
						 libpq/backend/pqformat.cpp \
						 libpq/backend/pqmq.cpp \
						 libpq/backend/pqsignal.cpp
						 

libpq_backend_INCLUDES = \
							-I$(srcdir)/libpq/include